# arrow

./: .gitattributes  .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go
.github/workflows/: release.yml
cmd/: build.go  serve.go  status.go
config/: config.go
core/md/: md.go
go/: go.mod  main.go
go/cmd/: new.go
go/core/fs/: fs.go
src/: cmd.rs  commands.rs  config.rs  djot.rs  fs.rs  main.rs
tests/: cli_tests.rs
utils/spin/: README.md  main.go
