[package]
name = "arrow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = "4.5.39"
colored = "3.0.0"
dirs = "6.0.0"
inquire = "0.7.5"
jotdown = "0.8.0"
notify = "8.1.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
syntect = "5.2.0"
tera = "1.20.0"
tokio = { version = "1.46.1", features = ["full"] }
walkdir = "2.5.0"
warp = "0.3.7"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
